Add enzyme for testing.

--- a/package.json
+++ b/package.json
@@ -39,7 +39,12 @@
   },
   "devDependencies": {
     "@storybook/react": "^5.2.5",
+    "@types/enzyme": "^3.10.3",
+    "@types/enzyme-adapter-react-16": "^1.0.5",
     "awesome-typescript-loader": "^5.2.1",
+    "enzyme": "^3.10.0",
+    "enzyme-adapter-react-16": "^1.15.1",
+    "jest-enzyme": "^7.1.2",
     "react-docgen-typescript-loader": "^3.3.0",
     "react-docgen-typescript-webpack-plugin": "^1.1.0"
   }
